objects/Account.object
<CustomObject>
    <fields>
        <fullName>DT_Client_Rating__c</fullName>
        <description>Additional rating system used only by Direct Travel East Region.</description>
        <inlineHelpText>Additional rating system used only by Direct Travel East Region.</inlineHelpText>
        <label>DT Client Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Messaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Messaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_State__c</fullName>
        <label>Enterprise State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Split_Ticket__c</fullName>
        <label>Fee - Split Ticket</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GDS_Profile_Name__c</fullName>
        <label>GDS Profile Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Locations__c</fullName>
        <inlineHelpText>Please list a few of the countries or the regions that apply – for example: APAC (Asia Pacific); EUR (Europe); MEA (Middle East and Africa), or LATAM (Latin America).</inlineHelpText>
        <label>Global Locations</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights_YTD__c</fullName>
        <label># Hotel Nights (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limo_Car_Service__c</fullName>
        <label>Limo/Car Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-1 Garden State Limo</fullName>
                </value>
                <value>
                    <fullName>A Better Car &amp; Limo Service</fullName>
                </value>
                <value>
                    <fullName>Ace</fullName>
                </value>
                <value>
                    <fullName>ADM Shuttle</fullName>
                </value>
                <value>
                    <fullName>Arrow Limo</fullName>
                </value>
                <value>
                    <fullName>ASAP Limo</fullName>
                </value>
                <value>
                    <fullName>Augie’s Limousine</fullName>
                </value>
                <value>
                    <fullName>Broadway</fullName>
                </value>
                <value>
                    <fullName>Capitol Sedan</fullName>
                </value>
                <value>
                    <fullName>Carey</fullName>
                </value>
                <value>
                    <fullName>Castor’s Car Service &amp; Limo</fullName>
                </value>
                <value>
                    <fullName>Central Park Limo</fullName>
                </value>
                <value>
                    <fullName>Class A Transportation</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Limo</fullName>
                </value>
                <value>
                    <fullName>Crest Limo</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
                <value>
                    <fullName>DavEl Boston Coach</fullName>
                </value>
                <value>
                    <fullName>Eclipse Transportation</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>Empire</fullName>
                </value>
                <value>
                    <fullName>Europe Limo</fullName>
                </value>
                <value>
                    <fullName>ExecuCar</fullName>
                </value>
                <value>
                    <fullName>Executive Services Group</fullName>
                </value>
                <value>
                    <fullName>Flag Limo</fullName>
                </value>
                <value>
                    <fullName>Flyte Tyme</fullName>
                </value>
                <value>
                    <fullName>Gem Limo</fullName>
                </value>
                <value>
                    <fullName>Greenwich Taxi</fullName>
                </value>
                <value>
                    <fullName>Ishi</fullName>
                </value>
                <value>
                    <fullName>Ivy Limousine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notified_of_Loss__c</fullName>
        <label>Notified of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salesloft_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp filed for Salesloft data updating</description>
        <label>Salesloft Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Dollars_ERP__c</fullName>
        <description>Refer to contract for actual dollar amount.</description>
        <label>Soft Dollars/ERP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Start-up Only</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_Parking_Spot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Parking Spot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATP_International__c</fullName>
        <label>ATP - International</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Since_Days__c</fullName>
        <description>Used to calculate the days that a customer has been a client</description>
        <formula>Today() - Client_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Since (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Return__c</fullName>
        <label>Commission Return</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>MICE</fullName>
                </value>
                <value>
                    <fullName>GDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Date contract w/agency expires.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elite_Agent_Email__c</fullName>
        <inlineHelpText>Applies only for WR Accounts.</inlineHelpText>
        <label>Elite Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Elite_Agent_Phone__c</fullName>
        <inlineHelpText>Applies only for WR Accounts.</inlineHelpText>
        <label>Elite Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Expense_Mgmt_Tool__c</fullName>
        <label>Expense Mgmt Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Chrome River</fullName>
                </value>
                <value>
                    <fullName>Concur Expense</fullName>
                </value>
                <value>
                    <fullName>Cost Point</fullName>
                </value>
                <value>
                    <fullName>Coupa</fullName>
                </value>
                <value>
                    <fullName>DATABASIC</fullName>
                </value>
                <value>
                    <fullName>Deem Expense</fullName>
                </value>
                <value>
                    <fullName>Deltek</fullName>
                </value>
                <value>
                    <fullName>DEXT</fullName>
                </value>
                <value>
                    <fullName>Emburse Book</fullName>
                </value>
                <value>
                    <fullName>Expense Anywhere</fullName>
                </value>
                <value>
                    <fullName>ExpenseWire</fullName>
                </value>
                <value>
                    <fullName>Expensify</fullName>
                </value>
                <value>
                    <fullName>ExpenSys</fullName>
                </value>
                <value>
                    <fullName>Gelco</fullName>
                </value>
                <value>
                    <fullName>IBM GERS</fullName>
                </value>
                <value>
                    <fullName>IExpense</fullName>
                </value>
                <value>
                    <fullName>IFS Expense</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Interplx</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Nexonia</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>UniNet</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Verian</fullName>
                </value>
                <value>
                    <fullName>WellsOne Commercial Card Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_International__c</fullName>
        <label>Fee - International</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Online_Assist__c</fullName>
        <label>Fee - Online Assist</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_VIP_Concierge__c</fullName>
        <label>Fee - VIP/Concierge</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Start__c</fullName>
        <label>Fiscal Year Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan (Calendar)</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Fee_OBT__c</fullName>
        <label>Incumbent Fee - OBT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pseudo_City_Codes__c</fullName>
        <label>Pseudo City Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDR_Assigned_Name__c</fullName>
        <description>Which SDR is working this?</description>
        <label>SDR Assigned Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Cacioppo</fullName>
                </value>
                <value>
                    <fullName>Crystie Morgan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2022_Hotel_Spend__c</fullName>
        <label>2022 Hotel Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2023_Hotel_Spend__c</fullName>
        <label>2023 Hotel Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2024_Hotel_Spend__c</fullName>
        <label>2024 Hotel Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CHECK_BOX_FOR_DATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHECK BOX FOR DATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPY_SF_Account_ID__c</fullName>
        <formula>Id</formula>
        <label>COPY SF Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPY_VIP_Agent_800__c</fullName>
        <formula>VIP_Agent_800__c</formula>
        <label>COPY VIP Agent 800#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_After_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if we bill for after-hours services. Be sure to add the after-hours fee in the FINANCIAL section.</inlineHelpText>
        <label>Charge – After-hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Auto_Roll__c</fullName>
        <label>Contract Auto Roll</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Roll/Month to Month</fullName>
                </value>
                <value>
                    <fullName>1 year extension</fullName>
                </value>
                <value>
                    <fullName>(2) 1 year extensions</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>Every 2 Years</fullName>
                </value>
                <value>
                    <fullName>Every 3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Select_Rank__c</fullName>
        <description>Account ranking tiers for use for Direct Select Clients</description>
        <label>Direct Select Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Non_ARC_WN_Web__c</fullName>
        <label>Fee - Non-ARC (WN Web)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Password_Reset__c</fullName>
        <label>Fee - Online Support</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_E_Service_Config__c</fullName>
        <inlineHelpText>Who books this companies M&amp;E or Group Air?</inlineHelpText>
        <label>M&amp;E Service Config</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DT M&amp;E Client</fullName>
                </value>
                <value>
                    <fullName>DT Group Air Client</fullName>
                </value>
                <value>
                    <fullName>Managed in DT Region</fullName>
                </value>
                <value>
                    <fullName>Client Managed or Outsourced</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OBT_Account_Number__c</fullName>
        <label>OBT Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Duty_of_Care__c</fullName>
        <label>Other Duty of Care Tool</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AIG Travel Guard</fullName>
                </value>
                <value>
                    <fullName>Alert Media</fullName>
                </value>
                <value>
                    <fullName>Anvil_Group</fullName>
                    <label>Anvil Group</label>
                </value>
                <value>
                    <fullName>ATPI TTS (Traveler Tracking Service)</fullName>
                </value>
                <value>
                    <fullName>Direct2U</fullName>
                </value>
                <value>
                    <fullName>Drum Cussac</fullName>
                </value>
                <value>
                    <fullName>Etravel Advisories</fullName>
                </value>
                <value>
                    <fullName>Everbridge</fullName>
                </value>
                <value>
                    <fullName>FocusPoint (CAP)</fullName>
                </value>
                <value>
                    <fullName>GardaWorld</fullName>
                </value>
                <value>
                    <fullName>Global Rescue</fullName>
                </value>
                <value>
                    <fullName>Healix</fullName>
                </value>
                <value>
                    <fullName>HX Global</fullName>
                </value>
                <value>
                    <fullName>ISOS</fullName>
                </value>
                <value>
                    <fullName>Mantic Point</fullName>
                </value>
                <value>
                    <fullName>NC4</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>SafeToGo</fullName>
                </value>
                <value>
                    <fullName>Vision Assure</fullName>
                </value>
                <value>
                    <fullName>WorldAware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_Air_Int__c</fullName>
        <label>Percentage Air - Intl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prospect_Spend_Air__c</fullName>
        <label>Prospect Spend - Air</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Spend_Car__c</fullName>
        <label>Prospect Spend - Car</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Solution__c</fullName>
        <label>Reporting Solution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATPI Analytics</fullName>
                    <isActive>false</isActive>
                    <label>ATPI Analytics</label>
                </value>
                <value>
                    <fullName>Direct Intelligence</fullName>
                </value>
                <value>
                    <fullName>Direct Results (Prime)</fullName>
                </value>
                <value>
                    <fullName>Direct Select</fullName>
                </value>
                <value>
                    <fullName>Prime Analytics</fullName>
                    <isActive>false</isActive>
                    <label>Prime Analytics</label>
                </value>
                <value>
                    <fullName>TripStax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSO_to_Online_Tool__c</fullName>
        <label>SSO to Online Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traveler_Messaging__c</fullName>
        <inlineHelpText>Relating to client messaging at the traveler level (via Direct Messaging), Opt-in indicates a client company allows DT to share marketing/promotions to travelers (i.e., Fast Track to Status or Double Point Promos) and Opt-out prevents us from sharing at the traveler level.</inlineHelpText>
        <label>Traveler Messaging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2022_Hotel_Nights__c</fullName>
        <label>2022 # Hotel Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2024_Hotel_Nights__c</fullName>
        <label>2024 # Hotel Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Clinical_Trials__c</fullName>
        <inlineHelpText>How many clinical trials are currently ongoing?</inlineHelpText>
        <label># of Clinical Trials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>For use in the Account - Direct Select Email flow.</description>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Owner_SF_ID__c</fullName>
        <description>Salesforce User Id for Account Owner</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Form_of_Payment__c</fullName>
        <label>Air Form of Payment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Travel Card</fullName>
                </value>
                <value>
                    <fullName>Cash Account</fullName>
                </value>
                <value>
                    <fullName>Company Card</fullName>
                </value>
                <value>
                    <fullName>CSI Card</fullName>
                </value>
                <value>
                    <fullName>Ghost Card</fullName>
                </value>
                <value>
                    <fullName>Traveler Cards (Company)</fullName>
                </value>
                <value>
                    <fullName>Traveler Cards (Personal)</fullName>
                </value>
                <value>
                    <fullName>UATP Card</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_Spend_Total_YTD__c</fullName>
        <label>Air Spend-Total (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Volume_Domestic__c</fullName>
        <label>Air Spend-Domestic (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPY_Agent_Team_800__c</fullName>
        <formula>Agent_Team_800__c</formula>
        <label>COPY Agent Team 800</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Market_Segment__c</fullName>
        <description>Core Client segments based on Air Volume</description>
        <inlineHelpText>CORE CLIENTS ONLY - Identify the Core client segment based on the company’s annual air volume (Direct Select $1M US or $750 CAD | Mid-Market $1-5M | Large $5M+ or ticketing in US/CAN | Global – ticketing with ATPI).</inlineHelpText>
        <label>Core Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Select</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crisis24_GardaWorld__c</fullName>
        <inlineHelpText>Which Crisis24/GardaWorld product does this company subscribe to?   Enhanced, Core, Core  - but do not contact /message travelers, opt-out entirely.</inlineHelpText>
        <label>Crisis24/GardaWorld</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Core - Do Not Contact Tvlrs</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_After_Hours_VIP__c</fullName>
        <label>Fee - After Hours VIP</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Ticketing_Date__c</fullName>
        <label>Last Ticketing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Travelers__c</fullName>
        <label>Number of Travelers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Booking_Tool__c</fullName>
        <label>Online Booking Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amadeus e-Travel</fullName>
                </value>
                <value>
                    <fullName>Argo</fullName>
                </value>
                <value>
                    <fullName>Atriis</fullName>
                </value>
                <value>
                    <fullName>Axiom</fullName>
                </value>
                <value>
                    <fullName>Certify</fullName>
                </value>
                <value>
                    <fullName>CTA (Poland)</fullName>
                </value>
                <value>
                    <fullName>Cytric</fullName>
                </value>
                <value>
                    <fullName>Deem</fullName>
                </value>
                <value>
                    <fullName>e-Travel</fullName>
                </value>
                <value>
                    <fullName>eTrip (China)</fullName>
                </value>
                <value>
                    <fullName>GetThere</fullName>
                </value>
                <value>
                    <fullName>INNfinity</fullName>
                </value>
                <value>
                    <fullName>ITQ (India)</fullName>
                </value>
                <value>
                    <fullName>Locomote (UK)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <label>None - No OBT Implemented</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAP Concur</fullName>
                </value>
                <value>
                    <fullName>SAP Concur - Direct Agreement</fullName>
                </value>
                <value>
                    <fullName>Serko_Classic</fullName>
                    <label>Serko - Classic</label>
                </value>
                <value>
                    <fullName>Spotnana</fullName>
                </value>
                <value>
                    <fullName>Traveldoo</fullName>
                </value>
                <value>
                    <fullName>Travellink</fullName>
                </value>
                <value>
                    <fullName>TravelServer</fullName>
                </value>
                <value>
                    <fullName>Trip Manager</fullName>
                </value>
                <value>
                    <fullName>Zeno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>